// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PredictionDataDisplay matches snapshot 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <div class="title">Who will win?</div>
  <!--v-if-->
  <div data-v-d255ffee="" class="ipl-space color-light prediction-outcomes-space">
    <div class="outcome"><span class="team-name wrap-anywhere">First Team</span>
      <div><span>10,000 points</span><span style="float: right;">5 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 100% </span></div>
      <ipl-progress-bar-stub color="blue" backgroundcolor="dark" class="m-t-4" value="100"></ipl-progress-bar-stub>
    </div>
    <div class="outcome">
      <ipl-progress-bar-stub color="pink" backgroundcolor="dark" value="0"></ipl-progress-bar-stub>
      <div class="m-t-4"><span>1 point</span><span style="float: right;">1 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 0% </span></div><span class="team-name wrap-anywhere">Second Team</span>
    </div>
  </div>
</div>"
`;

exports[`PredictionDataDisplay matches snapshot with newly started prediction 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <div class="title">Who will win?</div>
  <!--v-if-->
  <div data-v-d255ffee="" class="ipl-space color-light prediction-outcomes-space">
    <div class="outcome"><span class="team-name wrap-anywhere">First Team</span>
      <div><span>0 points</span><span style="float: right;">5 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 0% </span></div>
      <ipl-progress-bar-stub color="blue" backgroundcolor="dark" class="m-t-4" value="0"></ipl-progress-bar-stub>
    </div>
    <div class="outcome">
      <ipl-progress-bar-stub color="pink" backgroundcolor="dark" value="0"></ipl-progress-bar-stub>
      <div class="m-t-4"><span>0 points</span><span style="float: right;">1 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 0% </span></div><span class="team-name wrap-anywhere">Second Team</span>
    </div>
  </div>
</div>"
`;

exports[`PredictionDataDisplay matches snapshot with timer 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <div class="title">Who will win?</div>
  <div class="text-center">1:39 remaining </div>
  <div data-v-d255ffee="" class="ipl-space color-light prediction-outcomes-space">
    <div class="outcome"><span class="team-name wrap-anywhere">First Team</span>
      <div><span>10,000 points</span><span style="float: right;">5 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 100% </span></div>
      <ipl-progress-bar-stub color="blue" backgroundcolor="dark" class="m-t-4" value="100"></ipl-progress-bar-stub>
    </div>
    <div class="outcome">
      <ipl-progress-bar-stub color="pink" backgroundcolor="dark" value="0"></ipl-progress-bar-stub>
      <div class="m-t-4"><span>1 point</span><span style="float: right;">1 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 0% </span></div><span class="team-name wrap-anywhere">Second Team</span>
    </div>
  </div>
</div>"
`;

exports[`PredictionDataDisplay matches snapshot with winner 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-dark">
  <div class="title">Who will win?</div>
  <!--v-if-->
  <div data-v-d255ffee="" class="ipl-space color-light prediction-outcomes-space">
    <div class="outcome"><span class="team-name wrap-anywhere">First Team</span>
      <div><span>10,000 points</span><span style="float: right;">5 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 18% </span></div>
      <ipl-progress-bar-stub color="blue" backgroundcolor="dark" class="m-t-4" value="18"></ipl-progress-bar-stub>
    </div>
    <div class="outcome is-winner">
      <ipl-progress-bar-stub color="yellow" backgroundcolor="dark" value="82"></ipl-progress-bar-stub>
      <div class="m-t-4"><span>45,879 points</span><span style="float: right;">20 <font-awesome-icon-stub icon="users" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub> 82% </span></div><span class="team-name wrap-anywhere">Second Team</span>
    </div>
  </div>
</div>"
`;
